--- a/src/main/webapp/css/authorization.css
+++ b/src/main/webapp/css/authorization.css
@@ -1,18 +1,20 @@
-#regContainer{
+#regContainer {
     margin-top: 3%;
 }
 
 .panel-login {
     border-color: #ccc;
     background-color: #f9f8f8;
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
-    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
 }
-.panel-login>.panel-heading {
-    text-align:center;
+
+.panel-login > .panel-heading {
+    text-align: center;
 }
-.panel-login>.panel-heading a{
+
+.panel-login > .panel-heading a {
     text-decoration: none;
     font-weight: bold;
     font-size: 28px;
@@ -20,21 +22,24 @@
     -moz-transition: all 0.1s linear;
     transition: all 0.1s linear;
 }
-.panel-login>.panel-heading a.active{
+
+.panel-login > .panel-heading a.active {
     font-size: 34px;
 }
-.panel-login>.panel-heading hr{
+
+.panel-login > .panel-heading hr {
     margin-top: 10px;
     margin-bottom: 0px;
     clear: both;
     border: 0;
     height: 1px;
-    background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));
-    background-image: -moz-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
-    background-image: -ms-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
-    background-image: -o-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
+    background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
+    background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
+    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
 }
-.panel-login input[type="text"],.panel-login input[type="email"],.panel-login input[type="password"] {
+
+.panel-login input[type="text"], .panel-login input[type="email"], .panel-login input[type="password"] {
     height: 45px;
     border: 1px solid #ddd;
     font-size: 16px;
@@ -42,16 +47,35 @@
     -moz-transition: all 0.1s linear;
     transition: all 0.1s linear;
 }
+
+.form-group {
+    position: relative;
+}
+
+.form-group input {
+    width: 93%;
+}
+
+img.status {
+    position: absolute;
+    display: none;
+    right: 0;
+    width: 25px;
+    height: 25px;
+
+}
+
 .panel-login input:hover,
 .panel-login input:focus {
-    outline:none;
+    outline: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
     border-color: #ccc;
 }
+
 .btn-login {
-    background-color:#3D9DB3;
+    background-color: #3D9DB3;
     outline: none;
     color: #fff;
     font-size: 14px;
@@ -61,12 +85,14 @@
     text-transform: uppercase;
     border-color: #2d92a9;
 }
+
 .btn-login:hover,
 .btn-login:focus {
     color: #fff;
     background-color: #198da8;
     border-color: #53A3CD;
 }
+
 .btn-register {
     background-color: #17ae47;
     outline: none;
@@ -78,6 +104,7 @@
     text-transform: uppercase;
     border-color: #1CB94A;
 }
+
 .btn-register:hover,
 .btn-register:focus {
     color: #fff;
@@ -94,22 +121,22 @@
     background-size: cover;
     background-position: 50% 50%;
     background-image: url("../img/back5.jpg");
-    background-repeat:repeat;
+    background-repeat: repeat;
 }
 
-.panel-heading a{
+.panel-heading a {
     font-size: 48px;
     color: rgb(6, 106, 117);
     padding: 2px 0 10px 0;
-    font-family: 'FranchiseRegular','Arial Narrow',Arial,sans-serif;
+    font-family: 'FranchiseRegular', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     text-align: center;
     padding-bottom: 30px;
 }
 
-.panel-heading a{
+.panel-heading a {
     background: -webkit-repeating-linear-gradient(-45deg,
-    rgb(18, 83, 93) ,
+    rgb(18, 83, 93),
     rgb(18, 83, 93) 20px,
     rgb(64, 111, 118) 20px,
     rgb(64, 111, 118) 40px,
